--- a/VendingMachine.DataService/Resources/Resource.resx
+++ b/VendingMachine.DataService/Resources/Resource.resx
@@ -117,22 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Action_Cancel" xml:space="preserve">
-    <value>Отменить</value>
+  <data name="ExceptionMsg_EmptyOrder" xml:space="preserve">
+    <value>Для заказа требуется выбрать напиток и/или еду</value>
   </data>
-  <data name="Action_ConfirmOrder" xml:space="preserve">
-    <value>Подвердить заказ</value>
-  </data>
-  <data name="AppName" xml:space="preserve">
-    <value>Аппарат с едой</value>
-  </data>
-  <data name="Label_RUR" xml:space="preserve">
-    <value>руб.</value>
-  </data>
-  <data name="Label_Summary" xml:space="preserve">
-    <value>Стоимость</value>
-  </data>
-  <data name="Menu_Order" xml:space="preserve">
-    <value>Заказ</value>
+  <data name="ExceptionMsg_NotCompleteComposition" xml:space="preserve">
+    <value>Для заказа комплекса необходимо выбрать 1 напиток с любой едой + 1 напиток с любой добавкой</value>
   </data>
 </root>
