--- a/VendingMachine.DataService/Resources/Resource.resx
+++ b/VendingMachine.DataService/Resources/Resource.resx
@@ -121,6 +121,6 @@
     <value>Для заказа требуется выбрать напиток и/или еду</value>
   </data>
   <data name="ExceptionMsg_NotCompleteComposition" xml:space="preserve">
-    <value>Для заказа комплекса необходимо выбрать 1 напиток с любой едой + 1 напиток с любой добавкой</value>
+    <value>Для заказа комплекса необходимо выбрать 1 напиток с любой добавкой + 1 еду с любой добавкой</value>
   </data>
 </root>
